--- a/responsive_web_design/product_landing_page/index.html
+++ b/responsive_web_design/product_landing_page/index.html
@@ -3,12 +3,24 @@
 
 <head>
     <title>Product Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <header id="header"></header>
+    <header id="header">
+        <div class="logo">
+            <img id="header-img" src="images/company-logo.png" alt="company logo">
+        </div>
+        <nav id="nav-bar">
+            <ul>
+                <li><a class="nav-link" href="#Link1">Link 1</a></li>
+                <li><a class="nav-link" href="#Link1">Link 2</a></li>
+                <li><a class="nav-link" href="#Link1">Link 3</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
