--- a/responsive_web_design/product_landing_page/index.html
+++ b/responsive_web_design/product_landing_page/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Product Landing Page</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -15,11 +16,30 @@
         </div>
         <nav id="nav-bar">
             <ul>
-                <li><a class="nav-link" href="#Link1">Link 1</a></li>
-                <li><a class="nav-link" href="#Link1">Link 2</a></li>
-                <li><a class="nav-link" href="#Link1">Link 3</a></li>
+                <li><a class="nav-link" href="#features">Features</a></li>
+                <li><a class="nav-link" href="#how-it-works">How It Works</a></li>
+                <li><a class="nav-link" href="#pricing">Pricing</a></li>
             </ul>
         </nav>
+
+        <div class="container">
+
+            <h2>Handcrafted, home-made masterpieces</h2>
+
+            <div id="features" class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, quam?</div>
+
+            <div id="how-it-works" class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum, vel.</div>
+
+            <div id="pricing" class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, veritatis!</div>
+
+            <div id="product-video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/RFimmzu8nTw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
+
+
+
+
     </header>
 </body>
 
