progress with landing page

--- a/responsive_web_design/product_landing_page/index.html
+++ b/responsive_web_design/product_landing_page/index.html
@@ -5,6 +5,7 @@
     <title>Product Landing Page</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 
 <body>
@@ -23,23 +24,33 @@
         </nav>
 
         <div class="container">
-
             <h2>Handcrafted, home-made masterpieces</h2>
+            <div>
+                <form action="">
+                    <input id="email" type="email" placeholder="Enter your email address">
+                    <div><input type="submit" value="Get Started"></div>
+                </form>
+            </div>
 
-            <div id="features" class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, quam?</div>
-
-            <div id="how-it-works" class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum, vel.</div>
-
-            <div id="pricing" class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, veritatis!</div>
-
+            <div class="content">
+                <div class="icon"> <i class="fa fa-3x fa-fire"></i></div>
+                <div id="features" class="desc">
+                    <h2>Lorem, ipsum.</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, adipisci.</p>
+                </div>
+                <div id="how-it-works" class="desc">
+                    <h2>Lorem, ipsum.</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, adipisci.</p>
+                </div>
+                <div id="pricing" class="desc">
+                    <h2>Lorem, ipsum.</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, adipisci.</p>
+                </div>
+            </div>
             <div id="product-video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/RFimmzu8nTw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
-
-
-
-
     </header>
 </body>
 
