--- a/responsive_web_design/product_landing_page/index.html
+++ b/responsive_web_design/product_landing_page/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 
     <header id="header">
         <div class="logo">
@@ -22,36 +22,46 @@
                 <li><a class="nav-link" href="#pricing">Pricing</a></li>
             </ul>
         </nav>
+    </header>
 
-        <div class="container">
-            <h2>Handcrafted, home-made masterpieces</h2>
-            <div>
-                <form action="">
-                    <input id="email" type="email" placeholder="Enter your email address">
-                    <div><input type="submit" value="Get Started"></div>
-                </form>
-            </div>
+    <div class="container">
+        <h2>Handcrafted, home-made masterpieces</h2>
+        <div>
+            <form action="">
+                <input id="email" type="email" placeholder="Enter your email address">
+                <div><input type="submit" value="Get Started"></div>
+            </form>
+        </div>
+    </div>
 
-            <div class="content">
+    <div class="content">
+        <div id="page-wrapper">
+            <div class="grid">
                 <div class="icon"> <i class="fa fa-3x fa-fire"></i></div>
                 <div id="features" class="desc">
                     <h2>Lorem, ipsum.</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, adipisci.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident ex neque beatae, nostrum alias fugit distinctio quod optio blanditiis aut repudiandae in! Ipsa, possimus minima?</p>
                 </div>
+            </div>
+            <div class="grid">
+                <div class="icon"> <i class="fa fa-3x fa-truck"></i></div>
                 <div id="how-it-works" class="desc">
                     <h2>Lorem, ipsum.</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, adipisci.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet dolore optio cupiditate possimus aperiam, quia est ullam unde? Recusandae magnam, aliquam corporis quibusdam fuga deserunt?</p>
                 </div>
+            </div>
+            <div class="grid">
+                <div class="icon"> <i class="fa fa-3x fa-battery-full"></i></div>
                 <div id="pricing" class="desc">
                     <h2>Lorem, ipsum.</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, adipisci.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ab dicta ducimus a aliquam minus at atque quae natus vitae, vero, assumenda ipsum magnam voluptatem?</p>
                 </div>
             </div>
-            <div id="product-video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/RFimmzu8nTw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
         </div>
-    </header>
+    </div>
+    <div id="product-video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/RFimmzu8nTw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 </body>
 
 </html>
