--- a/responsive_web_design/product_landing_page/index.html
+++ b/responsive_web_design/product_landing_page/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
-
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <header id="header">
         <div class="logo">
             <img id="header-img" src="images/company-logo.png" alt="company logo">
@@ -23,19 +22,17 @@
             </ul>
         </nav>
     </header>
-
-    <div class="container">
-        <h2>Handcrafted, home-made masterpieces</h2>
-        <div>
-            <form action="">
-                <input id="email" type="email" placeholder="Enter your email address">
-                <div><input type="submit" value="Get Started"></div>
-            </form>
+    <div id="page-wrapper">
+        <div class="container">
+            <h2>Handcrafted, home-made masterpieces</h2>
+            <div>
+                <form id="form" method="POST" action="https://www.freecodecamp.com/email-submit">
+                    <input id="email" type="email" name="email" placeholder="Enter your email address">
+                    <div><input id="submit" type="submit" value="Get Started"></div>
+                </form>
+            </div>
         </div>
-    </div>
-
-    <div class="content">
-        <div id="page-wrapper">
+        <div class="content">
             <div class="grid">
                 <div class="icon"> <i class="fa fa-3x fa-fire"></i></div>
                 <div id="features" class="desc">
@@ -58,9 +55,9 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div id="product-video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/RFimmzu8nTw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div id="product-video">
+            <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/RFimmzu8nTw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </div>
 </body>
 
