--- a/responsive_web_design/technical_documentation_page/index.html
+++ b/responsive_web_design/technical_documentation_page/index.html
@@ -18,12 +18,21 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, expedita.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, velit.</p>
             <code>h1, h2, h3</code>
+            <ul>
+                <li>h4</li>
+                <li>h5</li>
+                <li>h6</li>
+            </ul>
         </section>
         <section class="main-section" id="Css">
             <header>Css</header>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, mollitia.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, at.</p>
             <code>body { margin: 0; padding: 0; }</code>
+            <ul>
+                <li>#id selector</li>
+                <li>.class selector</li>
+            </ul>
         </section>
         <section class="main-section" id="Javascript">
             <header>Javascript</header>
@@ -44,6 +53,14 @@
             <code>Console.WriteLine("Hello World");</code>
         </section>
     </main>
+    <nav id="navbar">
+        <header>Programming Knowledge</header>
+        <a class="nav-link" href="#Html">Html</a>
+        <a class="nav-link" href="#Css">Css</a>
+        <a class="nav-link" href="#Javascript">Javascript</a>
+        <a class="nav-link" href="#Python">Python</a>
+        <a class="nav-link" href="#C#">C#</a>
+    </nav>
 </body>
 
 </html>
