--- a/responsive_web_design/product_landing_page/index.html
+++ b/responsive_web_design/product_landing_page/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
     <header id="header">
         <div class="logo">
             <img id="header-img" src="images/company-logo.png" alt="company logo">
