--- a/responsive_web_design/personal_portfolio/index.html
+++ b/responsive_web_design/personal_portfolio/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Personal Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&family=Ubuntu+Mono&display=swap" rel="stylesheet">
@@ -23,13 +24,19 @@
         <section id="work">
         </section>
         <section id="contact">
-            <p>Email: test@test.com</p><br>
+            <!-- <p>Email: test@test.com</p><br> -->
+            <a id="profile-link" href="https://github.com/09try" target="_blank">GitHub</a>
         </section>
+
+        <!-- <div id="pepe">
+            <img src="pepe.png" alt="pepe">
+        </div> -->
 
     </section>
     <section id="projects">
         <div class="project-tile">
             <p>Lorem ipsum dolor sit amet.</p>
+            <a href="https://codepen.io/0994try/pen/bGBrXNq" target="_blank">Technical Documentation Page</a>
         </div>
         <div class="project-tile">
             <p>Lorem ipsum dolor sit amet.</p>
@@ -38,7 +45,7 @@
             <p>Lorem ipsum dolor sit amet.</p>
         </div>
     </section>
-
+    <section id="contact"></section>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
